crates/commitscape-tui/tests/snapshots/render__a_coupled_pair_opens_onto_the_commits_it_shared.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Risk                                                          "
"──────────────────────────────────────────────━━━━━━──────────────────────────────────────────────────────────"
"╭ Changing together ─────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ● handlers.ts  in src/api/                                                                                 │"
"│ ● client.ts  in web/src/                                                                                   │"
"│                                                                                                            │"
"│ ██████████████████████████████████████████████████████████████████████████████████████████████████████████ │"
"│ ● handlers.ts only 1   ● both 6   ● client.ts only 1                                                       │"
"│                                                                                                            │"
"│ Of the 8 commits that changed either file, 6 changed both: 75%. When client.ts changed, handlers.ts        │"
"│ changed too 6 of 7 times; when handlers.ts changed, client.ts changed too 6 of 7 times.                    │"
"│ ▲ They live in different folders, so this may be a dependency nobody wrote down.                           │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Commits in 90 days that changed both ──────────────────────────────────────────────────────────────────────╮"
"│ 2025-05-29  000000270  Bob Builder                                                                         │"
"│ 2025-05-20  000000210  Bob Builder                                                                         │"
"│ 2025-05-11  0000001c0  Bob Builder                                                                         │"
"│ 2025-05-01  000000180  Bob Builder                                                                         │"
"│ 2025-04-20  000000130  Bob Builder                                                                         │"
"│ 2025-04-11  0000000f0  Bob Builder                                                                         │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  esc back  ←→ panels  w window  ? help  q quit                                           "
