crates/commitscape-tui/tests/snapshots/render__a_directory_opens_onto_its_owners_and_the_80_percent_line.snap
---
source: crates/commitscape-tui/tests/render.rs
assertion_line: 103
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"────────────────────────────────────────────────────────────────────────━━━━━━━━━━━───────────────────────────"
"╭ Who holds src/engine/ ─────────────────────────────────────────────────────────────────────────────────────╮"
"│ 34 commits in 90 days touched files people wrote in src/engine/.                                           │"
"│ Bus factor 1: the fewest people who together made more than 80% of them.                                   │"
"│                                                                                                            │"
"│ ████████████████████████████████████████████████████████████████████████████████████████████████████████   │"
"│                                                                                                            │"
"│ person                   email                           commits  share  running                           │"
"│ ● Alice Example (exampl… alice@example.com                    30    88%      88%   past 80%                │"
"│ ● Carol Coder            carol@example.com                     4    12%     100%                           │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  esc back  ←→ panels  w window  ? help  q quit                                           "
