crates/commitscape-tui/tests/snapshots/render__a_group_of_people_opens_onto_the_mailmap_lines_that_would_join_them.snap
---
source: crates/commitscape-tui/tests/render.rs
assertion_line: 106
expression: screen(&mut app)
---
" commitscape  acme · 90d: 2025-04-02 to 2025-07-01 · 47 commits; 1 merge and 1 bulk commit not counted        "
" 1 Overview │ 2 Hotspots │ 3 Coupling │ 4 Ownership │ 5 Staleness │ 6 Code Age │ 7 People                     "
"┌ People who may be one person ──────────────────────────────────────────────────────────────────────────────┐"
"│They share a name or an email name, so they may be one person:                                              │"
"│                                                                                                            │"
"│  Alice Example          alice@example.com                    35 commits                                    │"
"│  Alice Example          alice@home.example.net                3 commits                                    │"
"│                                                                                                            │"
"│Nothing was merged: joining two real people would make Bus Factor confidently wrong.                        │"
"│If they are one person, add these lines to .mailmap at the repository root:                                 │"
"│                                                                                                            │"
"│  Alice Example <alice@example.com> <alice@home.example.net>                                                │"
"│                                                                                                            │"
"│commitscape, git log and git shortlog will then count them as one.                                          │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ move  enter open  esc back  q quit                                           w window  30d [90d] 1y  all  "
