crates/commitscape-tui/tests/snapshots/render__a_hotspot_opens_onto_its_file.snap
---
source: crates/commitscape-tui/tests/render.rs
assertion_line: 89
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"──────────────────────────────────────────────━━━━━━━━━━──────────────────────────────────────────────────────"
" core.rs   src/engine/                                                                                        "
"                                                                                                              "
"╭──────────────────────────╮╭─────────────────────────╮╭──────────────────────────╮╭─────────────────────────╮"
"│210                       ││630                      ││34                        ││1 day                    │"
"│lines                     ││nesting                  ││changes                   ││since last touched       │"
"│3.4 KB                    ││3.0 levels a line        ││in 90 days                ││first seen 31 Jul 2023   │"
"╰──────────────────────────╯╰─────────────────────────╯╰──────────────────────────╯╰─────────────────────────╯"
" Why it is a hotspot                                         ╭ Its commits in 90 days ─────────── 1–13 of 34 ╮"
" It is the most changed of 4 code files that changed in 90   │ 2025-06-29  0000003a0  Alice Example          │"
" days, and the most deeply nested of 6 code files at HEAD.   │ 2025-06-26  000000390  Alice Example          │"
" Code that is both is where changes are most likely to go    │ 2025-06-23  000000370  Alice Example          │"
" wrong.                                                      │ 2025-06-20  000000350  Alice Example          │"
"                                                             │ 2025-06-17  000000320  Alice Example          │"
" Who changed it in 90 days                                   │ 2025-06-15  000000310  Carol Coder            │"
" ● Alice Example (example.co… ████████████████    30  88%    │ 2025-06-14  000000300  Alice Example          │"
" ● Carol Coder                ██▎                  4  12%    │ 2025-06-11  0000002f0  Alice Example          │"
"                                                             │ 2025-06-08  0000002d0  Alice Example          │"
" Changes together with                                       │ 2025-06-05  0000002b0  Alice Example          │"
" ⇄ parser.rs   44% of their commits, 15 together             │ 2025-06-04  0000002a0  Carol Coder            │"
"                                                             │ 2025-06-02  000000290  Alice Example          │"
"                                                             │ 2025-05-30  000000280  Alice Example          │"
"                                                             ╰───────────────────────────────────────────────╯"
" ↑↓ move  enter open  esc back  ←→ panels  w window  ? help  q quit                                           "
