crates/commitscape-tui/tests/snapshots/render__a_list_taller_than_the_screen_scrolls_to_keep_the_selection_in_view.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: "screen_sized(&mut app, 110, 16)"
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Risk                                                          "
"──────────────────────────────────────────────━━━━━━──────────────────────────────────────────────────────────"
"╭ Risk ────────────────────────────────────────────────────────────────────────── in 90 days · enter to open ╮"
"│ Hotspots   code that changes often and is deeply nested · 4                                                │"
"│  ◆ core.rs      src/engine/            changed 34 times · the most changed of 4 · the most nested of 6     │"
"│  ◆ parser.rs    src/engine/            changed 15 times · the 2nd most changed of 4 · the 2nd most nested …│"
"│  ◆ handlers.ts  src/api/               changed 7 times · the 3rd most changed of 4 · the 3rd most nested o…│"
"│▌ ◆ client.ts    web/src/               changed 7 times · the 3rd most changed of 4 · the 5th most nested o…│"
"│                                                                                                            │"
"│ Change groups   files that keep changing in the same commits · 1                                           │"
"│  ⇄ 6 times together, across folders: handlers.ts, client.ts                                                │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  ←→ panels  w window  / find  ? help  q quit                                             "
