crates/commitscape-tui/tests/snapshots/render__a_longer_window_waits_for_the_rest_of_history_then_shows_it.snap
---
source: crates/commitscape-tui/tests/render.rs
assertion_line: 261
expression: screen(&mut app)
---
" commitscape   acme                                                                window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"─━━━━━━━━━━───────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                              "
"                                Reading the rest of history for the last year…                                "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" ↑↓ move  enter open  ←→ panels  w window  ? help  q quit                                                     "
