crates/commitscape-tui/tests/snapshots/render__a_merged_person_says_what_was_merged_and_why_and_can_be_undone.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"───────────────────────────━━━━━━━━───────────────────────────────────────────────────────────────────────────"
" ● Bob Builder   bob@example.com                                                                              "
"╭────────────────────╮╭────────────────────╮╭────────────────────╮╭────────────────────╮╭────────────────────╮"
"│9                   ││9                   ││1 day               ││11 Apr 2025         ││19 Jun 2025         │"
"│commits             ││active days         ││longest streak      ││first commit        ││last commit         │"
"│in 90 days          ││in 90 days          ││no two in a row     ││in 90 days          ││11 days ago         │"
"╰────────────────────╯╰────────────────────╯╰────────────────────╯╰────────────────────╯╰────────────────────╯"
"╭ Calendar ──────────────────── each square is a day ╮╭ Hours of the week ─────────── on each author's clock ╮"
"│    Apr       May     Jun                           ││    00          06          12          18            │"
"│Mon   ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                     ││Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│      ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                     ││Tue ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Thu ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Sat ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"╰─────────────────────────────── less ■ ■ ■ ■ ■ more ╯╰ busiest Thursdays around 21:00 ─ less ■ ■ ■ ■ ■ more ╯"
"╭ Works on ──────────────────────────────────────── 90 days ╮╭ About Bob ────────────────────────── 1–4 of 7 ╮"
"│ handlers.ts        ████████████    7  src/api/            ││ Merged 2 identities · same full name          │"
"│ client.ts          ████████████    7  web/src/            ││   bob@example.com                 10 commits  │"
"│                                                           ││   bob@laptop.example.net            1 commit  │"
"│                                                           ││ u undo, or make it permanent in .mailmap:     │"
"╰───────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────╯"
" ↑↓ move  enter open  esc back  ←→ panels  w window  ? help  q quit                                           "
