crates/commitscape-tui/tests/snapshots/render__a_person_opens_onto_when_and_what_they_work_on_and_who_they_may_also_be.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Risk                                                          "
"───────────────────────────━━━━━━━━───────────────────────────────────────────────────────────────────────────"
" ● Alice Example   alice@example.com                                                                          "
"╭────────────────╮╭─────────────────╮╭────────────────╮╭────────────────╮╭─────────────────╮╭────────────────╮"
"│30              ││-                ││30              ││1 day           ││3 Apr 2025       ││29 Jun 2025     │"
"│commits         ││lines added, remo││active days     ││longest streak  ││first commit     ││last commit     │"
"│in 90 days      ││none counted     ││in 90 days      ││no two in a row ││in 90 days       ││1 day ago       │"
"╰────────────────╯╰─────────────────╯╰────────────────╯╰────────────────╯╰─────────────────╯╰────────────────╯"
"╭ Calendar ──────────────────── each square is a day ╮╭ Hours of the week ─────────── on each author's clock ╮"
"│    Apr       May     Jun                           ││    00          06          12          18            │"
"│Mon   ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                     ││Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│      ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                     ││Tue ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Thu ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Sat ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"╰─────────────────────────────── less ■ ■ ■ ■ ■ more ╯╰ busiest Thursdays around 10:00 ─ less ■ ■ ■ ■ ■ more ╯"
"╭ Works on ──────────────────────────────────────── 90 days ╮╭ About Alice ──────────────────────── 1–4 of 9 ╮"
"│ core.rs            ████████████   30  src/engine/         ││ In 90 days, Alice made over 80% of the        │"
"│ parser.rs          ██████         15  src/engine/         ││ commits in these folders. If Alice left, few  │"
"│                                                           ││ others would know them.                       │"
"│                                                           ││ ▲ src/engine/             30 of 34 commits    │"
"╰───────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────╯"
" ↑↓ move  enter open  esc back  ←→ panels  w window  ? help  q quit                                           "
