crates/commitscape-tui/tests/snapshots/render__a_quiet_window_says_so_rather_than_showing_blanks.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Risk                                                          "
"─━━━━━━━━━━───────────────────────────────────────────────────────────────────────────────────────────────────"
" acme                                                                                                         "
" A Rust repository, 3 years and 4 months old.                                                                 "
"╭────────────────╮╭─────────────────╮╭────────────────╮╭────────────────╮╭─────────────────╮╭────────────────╮"
"│58              ││4                ││7               ││542             ││3.4 years        ││0               │"
"│commits         ││people           ││files           ││lines of code   ││old              ││active days     │"
"╰────────────────╯╰─────────────────╯╰────────────────╯╰────────────────╯╰─────────────────╯╰────────────────╯"
" ████████████████████████████████████████████████████████████████████████████████████████████████████████████ "
" ● Rust 77%   ● TypeScript 23%                                                                                "
"                                                                                                              "
"╭ Commits over time ─────────── 0 in 90 days ╮╭ Who writes the code ────── 90 days ╮╭ Code age ──────────────╮"
"│                                            ││                                    ││tallest 390 lines       │"
"│         No commits in this window.         ││  Nobody committed in this window.  ││█                       │"
"│                                            ││                                    ││█ ▂▆                    │"
"│                                            ││                                    ││2023  2025              │"
"╰────────────────────────────────────────────╯╰────────────────────────────────────╯╰────────────────────────╯"
"╭ Did you know? ──────────────────────────────────────╮╭ Worth a look ──────────────────────── enter to open ╮"
"│▸ old.rs has not been touched in 3 years and 1 month.││▌○ 7 of 7 files untouched for a year                 │"
"│                                                     ││ ● 1 pair of names may be one person                 │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"╰─────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  ←→ panels  w window  ? help  q quit                                                     "
