crates/commitscape-tui/tests/snapshots/render__activity.snap
---
source: crates/commitscape-tui/tests/render.rs
assertion_line: 36
expression: "panel('2')"
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"──────────────━━━━━━━━━━──────────────────────────────────────────────────────────────────────────────────────"
"╭ Commits over time ──────────────────────────────────────────────────────── 46 on 46 active days in 90 days ╮"
"│each bar is a day, the tallest 1 commit                                                                     │"
"│ █  █  █ ██  █  █ ██  █  █  ██ █  █  █ ██  ██ █ ██ ██ ██ ██  █ ███ █ ██  ██ ████ ██  █  █                   │"
"│ █  █  █ ██  █  █ ██  █  █  ██ █  █  █ ██  ██ █ ██ ██ ██ ██  █ ███ █ ██  ██ ████ ██  █  █                   │"
"│ █  █  █ ██  █  █ ██  █  █  ██ █  █  █ ██  ██ █ ██ ██ ██ ██  █ ███ █ ██  ██ ████ ██  █  █                   │"
"│Apr 2025                     May                            Jun                           Jul               │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Calendar ──────────────────── each square is a day ╮╭ Hours of the week ─────────── on each author's clock ╮"
"│    Apr       May     Jun                           ││    00          06          12          18            │"
"│Mon   ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                     ││Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│      ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                     ││Tue ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Thu ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Sat ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"│Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                       ││Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │"
"╰─────────────────────────────── less ■ ■ ■ ■ ■ more ╯╰ busiest Sundays around 10:00 ─── less ■ ■ ■ ■ ■ more ╯"
"╭ What kind of work ──────────── from commit messages ╮╭ Rhythm ─────────────────────────────────────────────╮"
"│ features    █████████████████████████████    21  46%││ at night          0%  22:00 to 05:00                │"
"│ fixes       ███████████████████████▌         17  37%││ on weekends       28%  Saturdays and Sundays        │"
"│ and refactors 4, docs 3, style 1                    ││ with an AI agent  7%  3 commits                     │"
"╰─────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯"
" ↑↓ move  ←→ panels  w window  ? help  q quit                                                                 "
